--- a/templates/mypage.html
+++ b/templates/mypage.html
@@ -1,118 +1,129 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>JUNGLE RANKING</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css"
+    />
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
-
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-        crossorigin="anonymous"></script>
-        <style>
-            .wrap{
-                text-align: center;
-                margin-top: 50px;
-            }
-            .table{
-              margin: 50px auto;
-              width: 700px;
-            }
-           /* footer{
-            width: 100%;
-      height: 70px;
-      position: absolute;  
-      bottom: 0;
-      left: 0;
-           } */
-           .time_remain{
-            margin: auto;
-            text-align: center;
-           }
-           .jungle {
-            font-size: 40pt;
-            color: white;
-            line-height: 200px;
-
-        }
-        .cover{
-          background-color:#a3e8f7;
-          margin: 0px auto;
-            width: 90%;
-            height: 200px;
-            font-family: 'Roboto', sans-serif;
-            text-align: center;
-          top: 0;
-        }
-        .card{
-          background-color:#6693ee;
-          margin: auto;
-            width: 50%;
-            font-family: 'Roboto', sans-serif;
-            text-align: center;
-            margin-top: 400px;
-        }
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap"
+      rel="stylesheet"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+      crossorigin="anonymous"
+    ></script>
+    <style>
+      .wrap {
+        text-align: center;
+        margin-top: 50px;
+      }
+      .table {
+        margin: 50px auto;
+        width: 700px;
+      }
+      .time_remain {
+        margin: auto;
+        text-align: center;
+      }
+      .jungle {
+        font-size: 40pt;
+        color: white;
+        line-height: 200px;
+      }
+      .cover {
+        background-color: #a3e8f7;
+        margin: 0px auto;
+        width: 90%;
+        height: 200px;
+        font-family: "Roboto", sans-serif;
+        text-align: center;
+        top: 0;
+      }
+      .card {
+        background-color: #6693ee;
+        margin: auto;
+        width: 50%;
+        font-family: "Roboto", sans-serif;
+        text-align: center;
+        margin-top: 500px;
+        line-height: 50px;
+      }
 
       .btns {
-        padding-left: 85%; 
+        padding-left: 85%;
         position: absolute;
         top: 30px;
       }
-        </style>
-</head>
+    </style>
+  </head>
   <body>
     <div class="cover">
-      <strong class="jungle">
-        JUNGLE RANKING
-      </strong>
+      <strong class="jungle"> JUNGLE RANKING </strong>
     </div>
     <div class="btns">
       <form id="info" action="/menubutton" method="POST">
-        <button style='width: 100px; float: left; ' class="button is-link is-outlined" >메뉴</button>
+        <button
+          style="width: 100px; float: left"
+          class="button is-link is-outlined"
+        >
+          메뉴
+        </button>
       </form>
       <form id="logout" action="/logout" method="POST">
-        <button class="button is-link is-outlined" style="float: right; display: inline; margin-top: 20px;">로그아웃</button>
-    </form>
-  </div>
-
-<div class="wrap">
-<strong style="font-size: 30pt;">내 정보</strong>
-</div>
-<table class="table">
-  <thead>
-    <tr >
-      <th>날짜</th>
-      <th>공부 시작시간</th>
-      <th>공부 종료시간</th>
-    </tr>
-  </thead>
-  
-  <tbody>
-    {% for i in range(mydata| length) %}
-    <tr>
-      <th>{{mydata[i]['date']}}</th>
-      <td>{{mydata[i]['start']}}</td>
-      <td>{{mydata[i]['end']}}</td>
-    </tr>
-    {% endfor %}
-    </tbody>
-    </table>
-      <div class="card">
-      <table class="table" style="background-color: #6693ee;  line-height: 50px; ">
-        <tr >
-          <th style="color: white">1등이 되려면 남은 시간 : {{ number_one }}분</th>
-      </tr>
-      <tr>
-        <th style="color: white">나의 일일 평균 공부시간 : {{ average }}분</th>
-      </tr>
-        <th style="color: white">전체 일일 평균 공부시간 : {{ total_average }}분</th>
-      </tr>
-      </table>
+        <button
+          class="button is-link is-outlined"
+          style="width: 100px; float: right; margin-top: 20px"
+        >
+          로그아웃
+        </button>
+      </form>
     </div>
-    
+
+    <div class="wrap">
+      <strong style="font-size: 30pt">내 정보</strong>
+    </div>
+    <table class="table">
+      <thead>
+        <tr>
+          <th>날짜</th>
+          <th>공부 시작시간</th>
+          <th>공부 종료시간</th>
+        </tr>
+      </thead>
+
+      <tbody>
+        {% for i in range(mydata| length) %}
+        <tr>
+          <th>{{mydata[i]['date']}}</th>
+          <td>{{mydata[i]['start']}}</td>
+          <td>{{mydata[i]['end']}}</td>
+        </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+      <table class="card table">
+        <tr>
+          <th style="color: white">
+            1등이 되려면 남은 시간 : {{ number_one }}분
+          </th>
+        </tr>
+        <tr>
+          <th style="color: white">
+            나의 일일 평균 공부시간 : {{ average }}분
+          </th>
+        </tr>
+        <tr>
+          <th style="color: white">
+            전체 일일 평균 공부시간 : {{ total_average }}분
+          </th>
+        </tr>
+      </table>
   </body>
 </html>
