--- a/templates/rank.html
+++ b/templates/rank.html
@@ -1,78 +1,118 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>JUNGLE RANKING</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css"
+    />
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
-
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-        crossorigin="anonymous"></script>
-        <style>
-          
-          .table{
-            margin: 100px auto;
-            width: 800px;
-            font-size: 13pt;
-          }
-          .wrap{
-         text-align: center;
-          }
-          .ranking{
-          margin-left: 40%;
-          }
-          .jungle {
-            font-size: 40pt;
-            color: white;
-            line-height: 200px;
-
-        }
-        .cover{
-          background-color:#a3e8f7;
-          margin: 0px auto;
-            width: 90%;
-            height: 200px;
-            font-family: 'Roboto', sans-serif;
-            text-align: center;
-          top: 0;
-        }
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap"
+      rel="stylesheet"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+      crossorigin="anonymous"
+    ></script>
+    <style>
+      .table {
+        margin: 100px auto;
+        width: 800px;
+        font-size: 13pt;
+      }
+      .wrap {
+        text-align: center;
+      }
+      .ranking {
+        margin-left: 40%;
+      }
+      .jungle {
+        font-size: 40pt;
+        color: white;
+        line-height: 200px;
+      }
+      .cover {
+        background-color: #a3e8f7;
+        margin: 0px auto;
+        width: 90%;
+        height: 200px;
+        font-family: "Roboto", sans-serif;
+        text-align: center;
+        top: 0;
+      }
       .btns {
-        padding-left: 85%; 
+        padding-left: 85%;
         position: absolute;
         top: 30px;
       }
-        </style>
-</head>
+    </style>
+  </head>
   <body>
     <div class="cover">
-    <strong class="jungle">
-      JUNGLE RANKING
-    </strong>
-  </div>
-  <div class="btns">
-  <form id="info" action="/mypage" method="GET">
-    <button style='width: 100px; float: left; ' class="button is-link is-outlined" >내 정보</button>
-  </form>
-    <form id="logout" action="/logout" method="POST">
-  <button class="button is-link is-outlined" style="float: right; display: inline; margin-top: 20px;">로그아웃</button>
-</form>   
-</div>
-  <div class="wrap">
-    <div style="margin: 30px;">
-  <strong style="font-size: 30pt;">순위</strong>
-</div>
-<div class="ranking">
-  <form style= 'width: 100px; float: left;'id="rank" action="/rank" method="GET" ><button class="button is-outlined">전체순위</button></form>
-  <form style= 'width: 100px; float: left;'id="red" action="/rank/red" method="GET"><button class="button is-danger is-outlined">RED</button></form>
-  <form style= 'width: 100px; float: left;'id="green" action="/rank/green" method="GET"><button class="button is-success is-outlined">GREEN</button></form>
-  <form style= 'width: 100px; float: left;'id="blue" action="/rank/blue" method="GET"><button class="button is-info is-outlined">BLUE</button></form>
-</div>
-</div>
+      <strong class="jungle"> JUNGLE RANKING </strong>
+    </div>
+    <div class="btns">
+      <form id="info" action="/mypage" method="GET">
+        <button
+          style="width: 100px; float: left"
+          class="button is-link is-outlined"
+        >
+          내 정보
+        </button>
+      </form>
+      <form id="logout" action="/logout" method="POST">
+        <button
+          class="button is-link is-outlined"
+          style="width: 100px; float: right; margin-top: 20px"
+        >
+          로그아웃
+        </button>
+      </form>
+    </div>
+    <div class="wrap">
+      <div style="margin: 30px">
+        <strong style="font-size: 30pt">순위</strong>
+      </div>
+      <div class="ranking">
+        <form
+          style="width: 100px; float: left"
+          id="rank"
+          action="/rank"
+          method="GET"
+        >
+          <button class="button is-outlined">전체순위</button>
+        </form>
+        <form
+          style="width: 100px; float: left"
+          id="red"
+          action="/rank/red"
+          method="GET"
+        >
+          <button class="button is-danger is-outlined">RED</button>
+        </form>
+        <form
+          style="width: 100px; float: left"
+          id="green"
+          action="/rank/green"
+          method="GET"
+        >
+          <button class="button is-success is-outlined">GREEN</button>
+        </form>
+        <form
+          style="width: 100px; float: left"
+          id="blue"
+          action="/rank/blue"
+          method="GET"
+        >
+          <button class="button is-info is-outlined">BLUE</button>
+        </form>
+      </div>
+    </div>
     <table class="table">
       <thead>
         <tr>
@@ -84,19 +124,19 @@
       <tbody>
         {% for i in range(ranker| length) %}
         <tr>
-          <th>{{ i + 1}}</th>
+          <th>{{ i + 1 }}</th>
           <td>{{ ranker[i]['name'] }}</td>
           <td>{{ ranker[i]['total'] }}</td>
         </tr>
         {% endfor %}
-        <footer>
-          <tfoot>
-            <tr style=' background-color:#a3e8f7'>
-              <th>{{ rank }}</th>
-              <th>{{ user['name'] }}</th>
-              <th>{{ user['total'] }}</th>
-            </tr>
-          </tfoot>
-        </footer>
+      </tbody>
+      <tfoot>
+        <tr style="background-color: #a3e8f7">
+          <th>{{ rank }}</th>
+          <th>{{ user['name'] }}</th>
+          <th>{{ user['total'] }}</th>
+        </tr>
+      </tfoot>
+    </table>
   </body>
 </html>
