--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,114 +1,95 @@
-<!Doctype html>
+<!DOCTYPE html>
 <html lang="ko">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>JUNGLE RANKING</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css"
+    />
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap"
+      rel="stylesheet"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+      crossorigin="anonymous"
+    ></script>
 
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+    <style>
+      .wrap {
+        margin: 100px auto;
+        width: 400px;
+      }
+      .title {
+        text-align: center;
+      }
+      .check {
+        margin-left: 10px;
+      }
+      .btn {
+        margin-top: 50px;
+      }
+      .jungle {
+        font-size: 40pt;
+        color: white;
+        line-height: 200px;
+      }
+      .cover {
+        background-color: #a3e8f7;
+        margin: 0px auto;
+        width: 90%;
+        height: 200px;
+        font-family: "Roboto", sans-serif;
+        text-align: center;
+        top: 0;
+      }
+    </style>
 
-        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-            crossorigin="anonymous"></script>
-
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-            integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-            crossorigin="anonymous"></script>
-
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
-
-<style>
-.wrap{
-    margin: 100px auto;
-    width: 400px;
-}
-.title{
-    text-align: center;
-}
-.check {
-  margin-left: 10px;
-}
-.btn{
-  margin-top: 50px;
-}
-.jungle {
-            font-size: 40pt;
-            color: white;
-            line-height: 200px;
-
-        }
-        .cover{
-          background-color:#a3e8f7;
-          margin: 0px auto;
-            width: 90%;
-            height: 200px;
-            font-family: 'Roboto', sans-serif;
-            text-align: center;
-          top: 0;
-        }
-
-</style>
-
-{%with messages = get_flashed_messages()%}
-{%if messages %}
-  <script type="text/javascript">
-    alert("{{messages[-1]}}");
-  </script>
-  {%endif%}
-{%endwith%}
-
-</head>
-<body>
-  <div class="cover">
-    <strong class="jungle">
-      JUNGLE RANKING
-    </strong>
-  </div>
+    {%with messages = get_flashed_messages()%} {%if messages %}
+    <script type="text/javascript">
+      alert("{{messages[-1]}}");
+    </script>
+    {%endif%} {%endwith%}
+  </head>
+  <body>
+    <div class="cover">
+      <strong class="jungle"> JUNGLE RANKING </strong>
+    </div>
     <form class="wrap" id="signup" action="/signup" method="POST">
-    <div class="field">
+      <div class="field">
         <h1 class="title">회원가입</h1>
         <label class="label">이름</label>
-          <input class="input" name="name" type="text">
+        <input class="input" name="name" type="text" />
       </div>
       <div class="field">
         <label class="label">아이디</label>
-        <div class="field is-grouped">
-          <input class="input" type="email" name="id">
 
-        </div>
+        <input class="input" type="email" name="id" />
       </div>
       <div class="field">
         <label class="label">비밀번호</label>
-        <div class="control">
-          <input class="input" name="password" type="password">
-          <h5 style="font-size: 8pt;" id="alert">비밀번호는 8자리 이상 입력해주세요</h5>
-        </div>
+        <input class="input" name="password" type="password" />
+        <h5 style="font-size: 8pt" id="alert">
+          비밀번호는 8자리 이상 입력해주세요
+        </h5>
       </div>
-      <div class="field">
+      <div class="field" style="margin-bottom: 30px">
         <label class="label">반 선택</label>
-        <div class="control">
-          <div class="select">
-            <select name="classroom">
-              <option>---</option>
-              <option>레드반</option>
-              <option>블루반</option>
-              <option>그린반</option>
-            </select>
-          </div>
-        </div>
-    </div>
-      <div class="btn field is-grouped">
-        <div class="control">
-          <button type= 'submit' class="button is-link">가입</button>
-        </div>
-        <div class="control">
+        <div class="select">
+          <select name="classroom">
+            <option>---</option>
+            <option>레드반</option>
+            <option>블루반</option>
+            <option>그린반</option>
+          </select>
         </div>
       </div>
+      <button type="submit" class="button is-link">가입</button>
     </form>
-    <div>
-
-</body>
+  </body>
 </html>
